# jexl-3000

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  favicon.afphoto  justfile  logo.afphoto
.github/: dependabot.yml
.github/workflows/: coverage.yml  docker-image.yml  rust.yml
jexl-3000/: Cargo.toml
jexl-3000/src/: lib.rs
jexl-demo/: README.md  index.html  package-lock.json  vite.config.js
jexl-demo/public/: default_context.json  default_expression.jexl-3000  tree-sitter-jexl3000.wasm  tree-sitter.mjs  tree-sitter.wasm
jexl-demo/src/: playground.js
jexl-eval/: Cargo.toml
jexl-eval/src/: error.rs  lib.rs
jexl-node/: Cargo.toml  index.d.ts  index.js  jexl-napi-rs.darwin-x64.node  package-lock.json  package.json
jexl-node/.github/workflows/: CI.yml
jexl-node/__test__/: index.spec.mjs
jexl-node/npm/darwin-x64/: README.md  package.json
jexl-node/npm/linux-arm64-gnu/: README.md  package.json
jexl-node/npm/linux-x64-gnu/: README.md  package.json
jexl-node/src/: lib.rs
jexl-parser/: Cargo.toml
jexl-parser/src/: ast.rs  lib.rs  parser.lalrpop  parser.rs
jexl-python/: Cargo.toml  pyproject.toml
jexl-python/src/: lib.rs
jexl-python/tests/: test.py
jexl-server/: Cargo.toml
jexl-server/src/: app_config.rs  error.rs  main.rs  metrics.rs  telemetry.rs
jexl-server/src/evaluator/: mod.rs
jexl-server/src/http/: http_metrics.rs  mod.rs  up.rs
jexl-serverless/: Cargo.toml  wrangler.toml
jexl-serverless/src/: lib.rs
jexl-wasm/: Cargo.toml
jexl-wasm/src/: lib.rs
parser-gen/: Cargo.toml
tree-sitter-jexl3000/: .gitignore  Cargo.toml  README.md  binding.gyp  grammar.js  package.json
tree-sitter-jexl3000/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
tree-sitter-jexl3000/bindings/node/: binding.cc  index.js
tree-sitter-jexl3000/bindings/rust/: README.md  lib.rs
tree-sitter-jexl3000/examples/: test.jexl3000
tree-sitter-jexl3000/queries/: highlights.scm  injections.scm  locals.scm.old  tags.scm.old
tree-sitter-jexl3000/script/: benchmark.js
tree-sitter-jexl3000/src/: grammar.json  node-types.json  parser.c  scanner.c
tree-sitter-jexl3000/test/corpus/: expressions.txt  jexl.txt  literals.txt
tree-sitter-jexl3000/test/highlight/: functions.js
