[package]
name = "jexl-3000"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
chrono = "0.4.19"
diacritics = "0.1.3"
jexl-eval = { path = "../jexl-eval" }
serde_json = "1.0.82"
thiserror = "1.0.30"

[dev-dependencies]
rstest = "0.12.0"
tikv-jemallocator = "0.4.3"
