[package]
name = "jexl-3000"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
chrono = "0.4.23"
diacritics = "0.1.3"
jexl-eval = { path = "../jexl-eval" }
serde_json.workspace = true
thiserror = "1.0.38"

[dev-dependencies]
rstest = "0.16.0"
tikv-jemallocator.workspace = true
