[package]
edition = '2018'
name = "jexl-eval"
version = "0.1.7"
authors = ["Mike Cooper <mythmon@gmail.com>", "The Sync Team <sync-team@mozilla.com>", "The Glean Team <glean-team@mozilla.com>"]
description = "A JEXL evaluator written in Rust"
license = "MPL-2.0"
repository = "https://github.com/mozilla/jexl-rs"

[dependencies]
jexl-parser = { version = "^0.1.7-alpha.0", path = "../jexl-parser" }
serde_json = "1.0.82"
serde = "1.0.136"
thiserror = "1.0.30"
anyhow = "1.0.57"
chrono = "0.4.19"
regex = "1.5.5"
dashmap = "5.3.3"
fxhash = "0.2.1"
rustc-hash = "1.1.0"

[dev-dependencies]
rstest = "0.12.0"
