[package]
edition = "2021"
name = "jexl-node"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.8.0", default-features = false, features = ["napi4", "serde-json"] }
napi-derive = "2.4.1"
jexl-3000 = { path = "../jexl-3000" }
serde_json = "1.0.79"
rayon = "1.5.3"
tikv-jemallocator = "0.4.3"

[build-dependencies]
napi-build = "1.2.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
