[package]
edition = "2021"
name = "jexl-node"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.10.11", default-features = false, features = ["napi4", "serde-json"] }
napi-derive = "2.9.3"
jexl-3000 = { path = "../jexl-3000" }
serde_json.workspace = true
rayon = "1.6.1"
tikv-jemallocator.workspace = true

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
