[package]
name = "jexl-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.57"
axum = { version = "0.5.6", features = ["tower-log", "http2"] }
tower = "0.4.12"
tower-http = { version = "0.3.1", features = ["cors", "trace"] }
tower-layer = "0.3.1"
tower-service = "0.3.1"
futures = "0.3.21"
dotenv = "0.15.0"
jexl-3000 = { path = "../jexl-3000" }
regex = "1.5.5"
serde_json = "1.0.81"
thiserror = "1.0.30"
tokio = { version = "1.18.2", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3.11", features = ["env-filter", "json", "parking_lot"] }
tracing = "0.1.34"
tracing-opentelemetry = "0.17.2"
tracing-futures = "0.2.5"
opentelemetry = { version = "0.17.0", features = ["rt-tokio", "metrics", "trace"] }
opentelemetry-otlp = { version = "0.10.0", optional = true, features = ["metrics", "tls", "trace"], default-features = false }
opentelemetry-prometheus = "0.10.0"
prometheus = "0.13.0"
serde = { version = "1.0.136", features = ["derive"] }
utoipa = { version = "1.0.1", features = ["json", "serde_json"] }
rayon = "1.5.3"
metrics = "0.18.1"
metrics-exporter-prometheus = "0.9.0"
tikv-jemallocator = "0.4.3"

[features]
#default = ["tracing/release_max_level_debug"]
otel = ["opentelemetry-otlp", "opentelemetry-otlp/tonic"]

[profile.release]
lto = true
codegen-units = 1

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.12.0"
libc = "0.2.124"
lazy_static = "1.4.0"

[dev-dependencies]
hyper = "0.14.18"
